--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
   function mover(){
-    window.location = 'https://t.co/6LgMXNAi50'
+    window.location = 'https://t.co/Ka1U2NaEQl'
 
   }; 
 
